Bug 401413 - Vault doesn't mount after entering the correct password
Summary: Vault doesn't mount after entering the correct password
Status: RESOLVED FIXED
Alias: None
Product: Plasma Vault
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Kubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: Ivan Čukić
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2018-11-25 21:59 UTC by Giorgi M.
Modified: 2019-03-23 10:44 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Giorgi M. 2018-11-25 21:59:47 UTC
SUMMARY
After creating a vault and locking it, cannot re-unlock it.

STEPS TO REPRODUCE
1. Create a vault, default encryption, default location
2. Put files in, lock it
3. Browse around in Dolphin
4. Try to re-unlock 

OBSERVED RESULT
Incorrect password detected, correct one does nothing.

EXPECTED RESULT
Unlocked vault with my files of it

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: 
KDE Plasma Version: 5.13.5
KDE Frameworks Version: 5.50.0
Qt Version: 5.11.1

ADDITIONAL INFORMATION
CryFS version 0.9.9
Comment 1 Giorgi M. 2018-11-27 22:22:43 UTC
There is a work-around!!
I've tried mounting my *.enc files at ~/.local/share/plasma-vault/ and found out there's a message form fuse saying that the target directory is non-empty.

My Dolphin options had "Show hidden files" enabled, so when I browsed the Vault directory with it, it created a file called ".directory" and contains some property flags.

This made the Vault dir "non-empty". Thus, when you try to remount it using Vaults, they give up - without showing you ANY info. 

Suggestion: if Vaults fails to mount a vault, show a notification? Or empty the directory, or something like that?
Comment 2 Ivan Čukić 2018-11-27 22:29:09 UTC
Thanks for investigating this. It is possible that the mount failed before the .directory was created. I need to investigate how it could have happened.
Comment 3 Giorgi M. 2018-11-27 22:53:48 UTC
I've double-checked. When I re-enter the folder and press CTRL+H in Doplhin, it creates the .directory file. 
Before that and after removing .directory, vault unlocks fine. If the file is there - no go and no visible error message.
Comment 4 Ivan Čukić 2019-03-23 10:24:59 UTC
So, if I understand this correctly, the .directory file reappears after you delete it?
Comment 5 Ivan Čukić 2019-03-23 10:44:13 UTC
Git commit 4574e80916ae4f4b29d60fd41dd52d3d52bb3e8f by Ivan Cukic.
Committed on 23/03/2019 at 10:42.
Pushed by ivan into branch 'master'.

Add a notification when mount failed because of a non empty mount point

CryFS does not report FUSE errors via return codes. This checks whether
the command output contained 'nonempty' before checking whether the
command ran successfully.

M  +7    -4    kded/engine/backends/cryfs/cryfsbackend.cpp

https://commits.kde.org/plasma-vault/4574e80916ae4f4b29d60fd41dd52d3d52bb3e8f